@@ -14,6 +14,7 @@
 #endif // WX_PRECOMP
 
 #include "wx/scopeguard.h"
+#include "wx/uiaction.h"
 
 #include "itemcontainertest.h"
 
@@ -303,3 +304,27 @@ void ItemContainerTestCase::SetSelection()
     container->SetSelection(1);
     CPPUNIT_ASSERT_EQUAL( 1, container->GetSelection() );
 }
+
+#if wxUSE_UIACTIONSIMULATOR
+
+void ItemContainerTestCase::SimSelect()
+{
+    wxItemContainer * const container = GetContainer();
+
+    container->Append("first");
+    container->Append("second");
+    container->Append("third");
+
+    GetContainerWindow()->SetFocus();
+
+    wxUIActionSimulator sim;
+    CPPUNIT_ASSERT( sim.Select("third") );
+    CPPUNIT_ASSERT_EQUAL( 2, container->GetSelection() );
+
+    CPPUNIT_ASSERT( sim.Select("first") );
+    CPPUNIT_ASSERT_EQUAL( 0, container->GetSelection() );
+
+    CPPUNIT_ASSERT( !sim.Select("tenth") );
+}
+
+#endif // wxUSE_UIACTIONSIMULATOR
